@@ -21,6 +21,8 @@
  *  $Id$
  */
 
+#include <cstdlib>
+
 /**
  * Returns a random numeric value that is larger than or equal min and smaller
  * than max
